# ecoroute

./: .bumpversion.cfg  .env.example  .gitignore  .pre-commit-config.yaml  ATLAS.md  ATLAS_INTEL_FLOW.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ECOROUTE_ARCHITECTURE.md  ECOROUTE_BUSINESS_REQUIREMENTS.md  LICENSE  Makefile  README.md  SECURITY.md  compose.yaml  pyproject.toml  requirements.txt  run.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  config.yml
.github/workflows/: ci.yml  dependencies.yml  release.yml  setup-labels.yml  update-dependencies.yml
alembic/: env.py
alembic/versions/: 4293e7abed55_initial_migration.py
app/: __init__.py  main.py
app/api/: __init__.py  auth.py  docs.py  fleet.py  health.py  root.py  shipments.py  users.py
app/core/: __init__.py  config.py  errors.py  logger.py  response.py  security.py
app/db/: __init__.py  session.py
app/models/: __init__.py  base.py  fleet.py  shipment.py  user.py
app/schemas/: auth.py  base.py  fleet.py  health.py  root.py  shipment.py  user.py
app/services/: auth.py  fleet.py  health.py  root.py  shipment.py  user.py
docs/: API_RBAC_SPEC.md  API_RESPONSE_STANDARD.md  ATLAS.md  ATLAS_INTEL_FLOW.md  DEPENDABOT.md  ECOROUTE_ARCHITECTURE.md
