[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecoroute"
version = "1.0.0"
description = "EcoRoute Atlas API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "email-validator==2.3.0",
    "fastapi==0.135.3",
    "uvicorn[standard]==0.43.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "sqlalchemy[asyncio]==2.0.49",
    "asyncpg==0.31.0",
    "alembic==1.18.4",
    "greenlet==3.3.2",
    "qdrant-client==1.17.1",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.22",
    "python-dotenv==1.2.2",
    "loguru==0.7.3",
    "python-json-logger==4.1.0",
    "httpx==0.28.1",
    "ruff==0.15.9",
    "black==26.3.1",
    "mypy==1.20.0"
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.6.0",
    "bump-my-version>=0.24.0",
    "build>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
